--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="manifest" href="manifest.json">
     <style></style>
     <title>Crazy Cars Unblocked</title>
+    <script>
+        window.location="https://ubg98.github.io/CrazyCars/";
+    </script>
     <script src="patch/js/poki-sdk-v2.js"></script>
     <script src="playcanvas-stable.min.js"></script>
     <script src="settings__.js"></script>
